  read those attributes on any kind of InventoryEntry.  The complete list
  of affected attributes is: ``executable``, ``text_id``, ``text_sha1``,
  ``text_size`` (only valid for kind == file); ``symlink_target`` (only
  valid for kind == link); and ``reference_revision`` (only valid for kind
  == tree-reference).  (Andrew Bennetts)

Internals
*********

Testing
*******

* The way ``bzr selftest --parallel`` generates N partitions of tests to
  run in parallel has changed.  Instead of splitting the list of tests at
  N-1 points, it distributes the tests one-by-one into the partitions in a
  round robin fashion.  This reduces the total time to run the tests in
  parallel because a series of slow tests in the test suite will be
  distributed evenly among the parallel test suites, rather than slowing
  down just one suite.  (Andrew Bennetts)


bzr 2.2
#######

:Codename: La Hulpe
:2.2: 2010-08-06

This release marks the start of another long-term-stable series. From
here, we will only make bugfix releases on the 2.2 series (2.2.1, etc),
while 2.3 will become our new development series. The 2.0 and 2.1 series
will also continue to get bugfixes. (Currently 2.0 is planned to be
supported for another 6 months.)

This is primarily a bugfix and polish release over the 2.1 series, with
a large number of bugs fixed (>120), and some performance improvements.

There are some compatibility changes in this release.  For users of bzrlib
as a library, we now request that they call ``bzrlib.initialize`` and use
the returned context manager appropriately. For commandline users we no
longer guess user identity for ``bzr commit``, users must specify their
identity using ``bzr whoami`` (you don't need to specify your identity for
readonly operations).

Users are encouraged to upgrade from the other stable series.

Compatibility Breaks
********************

* BzrError subclasses no longer support the name "message" to be used